<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/cog"
        android:layout_margin="8dp"
        android:contentDescription="@string/acc_player_settings" />

    <TextView
        android:id="@+id/life_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="72sp"
        android:text="@string/zero"/>

    <Button
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/life_total"
        android:layout_centerVertical="true"
        android:text="@string/minus"/>

    <Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/life_total"
        android:layout_centerVertical="true"
        android:text="@string/plus"/>

</RelativeLayout>